--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,11 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-kapt'
+    id 'org.jetbrains.kotlin.android.extensions'
+}
+
+androidExtensions {
+    experimental = true
 }
 
 android {
