--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-kapt'
     id 'org.jetbrains.kotlin.android.extensions'
+    id 'com.google.gms.google-services'
 }
 
 androidExtensions {
@@ -48,6 +49,7 @@ dependencies {
 
     implementation 'android.arch.lifecycle:runtime:1.1.1'
     implementation 'android.arch.lifecycle:extensions:1.1.1'
+    implementation 'com.google.firebase:firebase-functions:19.2.0'
     kapt 'android.arch.lifecycle:compiler:1.1.1'
 
     testImplementation 'junit:junit:4.+'
